--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,13 +1,12 @@
 [bumpversion]
-current_version = 0.4.28
+current_version = 0.5.1
 commit = True
 tag = True
 
 [bumpversion:file:VERSION]
 
-[bumpversion:file:./api/__version__.py]
+[bumpversion:file:./app/__version__.py]
 
-[bumpversion:file:./api/swagger.yaml]
+[bumpversion:file:./docs/belbio_api.yaml]
 
-[bumpversion:file:./docs/source/conf.py]
-
+[bumpversion:file:./sphinx/source/conf.py]
