--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,31 @@
 {
-    "python.pythonPath": "${workspaceFolder}/.venv/bin/python",
+    "peacock.color": "#eaca7f",
     "workbench.colorCustomizations": {
-        "activityBar.background": "#28aec2",
+        "activityBar.background": "#f1dcab",
+        "activityBar.activeBorder": "#1ba47b",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#b926a6",
+        "activityBarBadge.background": "#1ba47b",
         "activityBarBadge.foreground": "#e7e7e7",
-        "titleBar.activeBackground": "#1f8898",
-        "titleBar.inactiveBackground": "#1f889899",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveForeground": "#e7e7e799",
-        "statusBar.background": "#1f8898",
-        "statusBarItem.hoverBackground": "#28aec2",
-        "statusBar.foreground": "#e7e7e7"
+        "titleBar.activeBackground": "#eaca7f",
+        "titleBar.inactiveBackground": "#eaca7f99",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveForeground": "#15202b99",
+        "statusBar.background": "#eaca7f",
+        "statusBarItem.hoverBackground": "#e3b853",
+        "statusBar.foreground": "#15202b"
     },
-    "peacock.color": "#1f8898"
+    "python.pythonPath": ".venv/bin/python",
+    "python.analysis.openFilesOnly": false,
+    "python.analysis.memory.keepLibraryLocalVariables": true,
+    "python.autoComplete.addBrackets": true,
+    "python.venvPath": "~/.virtualenvs",
+    "python.testing.cwd": "${workspaceFolder}",
+    "python.testing.pytestEnabled": true,
+    "python.linting.pycodestylePath": "pep8",
+    "python.envFile": "${workspaceFolder}/.env",
+    "python.linting.pycodestyleEnabled": false,
+    "python.sortImports.path": "/Users/william/.virtualenvs/belapi-mMRBMYQv/bin/isort",
+    "autoDocstring.docstringFormat": "google",
+    "python.formatting.blackPath": "/usr/local/bin/black"
 }
