--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ httpx = "*"
 bump2version = "^1.0.0"
 flake8 = "^3.7.9"
 cachetools = "^4.0.0"
-bel = {git = "https://github.com/belbio/bel.git", branch = "master"}
+bel = {git = "https://github.com/belbio/bel.git", branch = "develop"}  # 1
 logging_tree = "^1.8.1"
 
 [tool.poetry.dev-dependencies]
